--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,42 @@
+# ============= ملفات Node.js =============
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
+# ============= ملفات البيئة =============
+.env
+.env.local
+.env*.local
+
+# ============= أنظمة التشغيل =============
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# ============= IDEs والمحررات =============
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.settings/
+
+# ============= الملفات المبنية =============
+dist/
+build/
+out/
+.coverage/
+
+# ============= نظام =============
+*.log
+*.tmp
+*.temp
+
+# ============= المشروع =============
+config.local.js
